--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Technical Test for Mid-Level Node.js Backend Developers",
   "main": "index.js",
   "scripts": {
-    "serve": "nodemon app.js"
+    "serve": "nodemon index.js",
+    "test": "set DESTROY_SOCKETS=true && jest --no-cache --runInBand --passWithNoTests --forceExit --testPathPattern=..."
   },
   "author": "",
   "license": "ISC",
@@ -12,13 +13,16 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "jest": "^29.7.0",
     "mongoose": "^8.5.0",
-    "supertest": "^7.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "@babel/core": "^7.24.8",
+    "@babel/preset-env": "^7.24.8",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0"
   }
 }
