--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "mongoose": "^8.5.0",
+    "node-fetch": "^2.7.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/jest": "^29.5.14",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "nodemon": "^3.1.4",
     "supertest": "^7.0.0",
     "swagger-jsdoc": "^6.2.8",
